--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
-name = "dft-tools"
+name = "dfttools"
 version = "0.1.0"
 description = "A collection of python modules and libraries for several DFT codes to handle input and output."
-authors = ["Lukas Hoermann <lukas.hoermann@warwick.ac.uk>", "Dylan Morgan <dylan.morgan@warwick.ac.uk"]
-license = "GPL 3"
+authors = [
+    "Lukas Hoermann <lukas.hoermann@warwick.ac.uk>",
+    "Dylan Morgan <dylan.morgan@warwick.ac.uk",
+]
+license = "GPL-3.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
