--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.10"
 numpy = "^1.26.4"
 scipy = "^1.13.0"
 ase = "^3.22.1"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev]
 optional = true
