--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ numpy = "^1.26.4"
 scipy = "^1.13.0"
 ase = "^3.22.1"
 pyyaml = "^6.0.1"
+spglib = "^2.5.0"
+networkx = "^3.3"
 
 [tool.poetry.group.dev]
 optional = true
