--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ ase = "^3.22.1"
 pyyaml = "^6.0.1"
 spglib = "^2.5.0"
 networkx = "^3.3"
+sphinx = "^7.4.7"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.group.dev]
 optional = true
