--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,6 @@ ase = "^3.22.1"
 pyyaml = "^6.0.1"
 spglib = "^2.5.0"
 networkx = "^3.3"
-sphinx = "^7.4.7"
-sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -28,6 +26,13 @@ black = "^24.3.0"
 ruff = "^0.3.5"
 pytest = "^8.2.0"
 ptpython = "^3.0.26"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.4.7"
+sphinx-rtd-theme = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
