--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -32,10 +32,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Build HTML
         uses: ammaraskar/sphinx-action@master
+        with: 
+          docs-folder: "docs/"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          docs-folder: "docs/"
+          name: html-docs
+          path: docs/_build/html
           
   deploy:
     environment:
