--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.4.7"
-sphinx-rtd-theme = "^2.0.0"
+furo = "^2024.7.18"
 
 [build-system]
 requires = ["poetry-core"]
