--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -3,9 +3,13 @@ name: Build and deploy Sphinx docs
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master, docs"]
+    branches:
+      - master 
+      - docs 
   pull_request:
-    branches: ["master, docs"]
+    branches:
+      - master
+      - docs
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
