--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -1,11 +1,15 @@
-name: Deploy and build Sphinx docs
+name: Build and deploy Sphinx docs
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches:
+      - master 
+      - docs 
   pull_request:
-    branches: ["master"]
+    branches:
+      - master
+      - docs
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,10 +36,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Build HTML
         uses: ammaraskar/sphinx-action@master
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
+        with: 
           docs-folder: "docs/"
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          name: github-pages
+          path: docs/build/html
           
   deploy:
     environment:
@@ -48,10 +55,6 @@ jobs:
       #  uses: actions/checkout@v4
       #- name: Setup Pages
       #  uses: actions/configure-pages@v5
-      #- name: Upload artifact
-      #  uses: actions/upload-pages-artifact@v3
-      #  with:
-      #    path: docs/build/html
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
