--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,33 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.4.7"
-furo = "^2024.7.18"
+piccolo-theme = "^0.23.0"
+sphinx-pyproject = "^0.3.0"
+myst-parser = "^3.0.1"
+sphinx-rtd-theme = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.sphinx-pyproject]
+project = "dfttools"
+author = "Lukas Hoermann, Dylan Morgan"
+copyright = "2024, Lukas Hoermann, Dylan Morgan"
+# html_theme = "piccolo_theme"
+html_theme = "sphinx_rtd_theme"
+extensions = [
+  "sphinx.ext.autodoc",
+  "sphinx.ext.viewcode",
+  "sphinx.ext.napoleon",
+  "myst_parser",
+]
+templates_path = ["_templates",]
+html_static_path = ["_static",]
+exclude_patterns = [
+  "build", 
+  ".DS_Store",
+]
 
 [tool.pytest.ini_options]
 pythonpath = "dfttools"
