--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Poetry 
         uses: abatilo/actions-poetry@v2 
       - name: Install the project dependencies
-        run: poetry install --with=docs
+        run: poetry install --only=docs
       - name: Build HTML
         uses: ammaraskar/sphinx-action@master
         with: 
