--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -46,7 +46,7 @@ jobs:
         uses: ammaraskar/sphinx-action@master
         with: 
           docs-folder: "docs/"
-          build-command: "poetry run -- make html"
+          # build-command: "poetry run -- make html"
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v3
         with:
