--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -46,6 +46,7 @@ jobs:
         uses: ammaraskar/sphinx-action@master
         with: 
           docs-folder: "docs/"
+          pre-build-command: "poetry shell"
           # build-command: "poetry run -- make html"
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v3
