--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: chartboost/ruff-action@v1
         with:
           src: "./dfttools"
-          args: "--fix --config ./pyproject.toml --output-format=github"
+          args: "check --fix --config ./pyproject.toml --output-format=github"
 
   ruff-format:
     runs-on: ubuntu-latest
