--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -21,6 +21,7 @@ jobs:
 
   ruff-format:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
