--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,9 +64,12 @@ exclude_patterns = [
 
 [tool.ruff]
 line-length = 88
+indent-with = 4
+target-version = "py310"
 
-# [tool.ruff.lint]
+[tool.ruff.lint]
 # select = ['']
+ignore = ["E741", ]
 
 [tool.pytest.ini_options]
 pythonpath = "dfttools"
