--- a/.github/workflows/pyright.yml
+++ b/.github/workflows/pyright.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2
       - name: Install the project dependencies
-        run: poetry install --only=dev
+        run: poetry install --with=dev
       - run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
       - uses: jakebailey/pyright-action@v2
         with:
