--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pytest = "^8.2.0"
 numpy = "^1.26.4"
 scipy = "^1.13.0"
 ase = "^3.22.1"
@@ -25,8 +26,8 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.5"
 pyright = "^1.1.373"
-pytest = "^8.2.0"
 ptpython = "^3.0.26"
+click = "^8.1.7"
 
 [tool.poetry.group.docs]
 optional = true
