--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,4 +1,4 @@
-name: Run the ruff linter and formatter
+name: ruff
 
 on:
   push:
@@ -12,6 +12,10 @@ on:
 jobs:
   ruff-lint:
     runs-on: ubuntu-latest
+    # strategy:
+    #   matrix:
+    #     python-version: ["3.10", "3.11", "3.12"]
+
     steps:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
@@ -22,6 +26,10 @@ jobs:
   ruff-format:
     runs-on: ubuntu-latest
     needs: ruff-lint
+    # strategy:
+    #   matrix:
+    #     python-version: ["3.10", "3.11", "3.12"]
+
     steps:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
