--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pytest = "^8.2.0"
 numpy = "^1.26.4"
 scipy = "^1.13.0"
 ase = "^3.22.1"
 pyyaml = "^6.0.1"
 spglib = "^2.5.0"
 networkx = "^3.3"
+click = "^8.1.7"
 
 [tool.poetry.group.dev]
 optional = true
@@ -26,7 +26,8 @@ optional = true
 ruff = "^0.3.5"
 pyright = "^1.1.373"
 ptpython = "^3.0.26"
-click = "^8.1.7"
+pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
 
 [tool.poetry.group.docs]
 optional = true
