--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2
       - name: Install the project dependencies
-        run: poetry install --only=docs
+        run: poetry install --with=docs
       - name: Build HTML
         run: cd docs && poetry run -- make html
       - name: Upload artifacts
