Added more tests for printing KS eigenvalues

--- a/tests/fixtures/default_aims_calcs/1/control.in
+++ b/tests/fixtures/default_aims_calcs/1/control.in
@@ -1,4 +1,5 @@
 xc                           pbe 
+output_level                 full
 ################################################################################
 #
 #  FHI-aims code project
