--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ ptpython = "^3.0.26"
 pytest = "^8.2.0"
 pytest-cov = "^5.0.0"
 coveralls = "^4.0.1"
+interrogate = "^1.7.0"
 
 [tool.poetry.group.docs]
 optional = true
