Reformatted and added templates for workflows

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -19,6 +19,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    # TODO run on all supported versions of the project
     # strategy:
     #   matrix:
     #     python-version: ["3.10", "3.11", "3.12"]
