--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Tests
+tests/.aims_bin_loc
+tests/fixtures/custom_bin_aims_calcs
+
+# Tutorials
 tutorials/temp/
