--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "GPL-3.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 numpy = "^1.26.4"
 scipy = "^1.13.0"
 ase = "^3.22.1"
@@ -18,6 +18,7 @@ pyyaml = "^6.0.1"
 spglib = "^2.5.0"
 networkx = "^3.3"
 numba = "^0.60.0"
+click = "^8.1.7"
 
 [tool.poetry.group.dev]
 optional = true
@@ -25,8 +26,11 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.5"
 pyright = "^1.1.373"
-pytest = "^8.2.0"
 ptpython = "^3.0.26"
+pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
+coveralls = "^4.0.1"
+interrogate = "^1.7.0"
 
 [tool.poetry.group.docs]
 optional = true
