--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dfttools"
-version = "0.1.0"
+version = "0.2.0"
 description = "A collection of python modules and libraries for several DFT codes to handle input and output."
 authors = [
     "Lukas Hoermann <lukas.hoermann@warwick.ac.uk>",
@@ -11,7 +11,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-numpy = "^1.26.4"
+numpy = ">=2,<2.1"
 scipy = "^1.13.0"
 ase = "^3.22.1"
 pyyaml = "^6.0.1"
