--- a/.github/workflows/pyright.yaml
+++ b/.github/workflows/pyright.yaml
@@ -21,4 +21,4 @@ jobs:
       - run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
       - uses: jakebailey/pyright-action@v2
         with:
-          working-directory: "./dfttools"
+          working-directory: "./dfttoolki"
