--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          src: "./dfttools"
+          src: "./dfttoolkit"
           args: "check --fix --config ./pyproject.toml --output-format=github"
 
   ruff-format:
@@ -28,5 +28,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          src: "./dfttools"
+          src: "./dfttoolkit"
           args: "format --config ./pyproject.toml"
