--- a/.github/workflows/sphinx-docs.yaml
+++ b/.github/workflows/sphinx-docs.yaml
@@ -5,11 +5,11 @@ on:
   push:
     branches:
       - main
-      - docs
+      # - docs
   pull_request:
     branches:
       - main
-      - docs
+      # - docs
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
