--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -52,7 +52,7 @@ jobs:
     environment:
       name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
+      url: https://pypi.org/project/dfttoolkit/
 
     steps:
       - name: Retrieve release distributions
